package NKikimrWhiteboard;

enum EFlag {
    Grey = 0;
    Green = 1;
    Yellow = 2;
    Orange = 3;
    Red = 4;
}
